<resources>
    <string name="app_name">Story App Dicoding</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="invalid_email_input">Email yang dimasukkan tidak cocok. Coba lagi.</string>
    <string name="email_hint">Masukkan email yang sudah didaftarkan</string>
    <string name="password_hint">Masukkan 6-digit password yang terdaftar</string>
    <string name="password_not_long_enough">Password yang dimasukkan kurang dari 6 digit</string>
    <string name="logo_dicoding">Logo Dicoding</string>
    <string name="email_icon">Email icon</string>
    <string name="password_icon">Password icon</string>
    <string name="hyperlink_to_register_account">Belum punya akun? Yuk, daftar dulu.</string>
    <string name="hyperlink_to_login">Sudah punya akun? Masuk.</string>
    <string name="masuk">Masuk</string>
    <string name="daftar">Daftar</string>
    <string name="add_new_story">Add new story</string>
    <string name="item">Item</string>
    <string name="image_collection">Image collection</string>
    <string name="cerita_dari_teman_teman_dicoding">Cerita dari teman-teman Dicoding</string>
    <string name="taking_photo">Take a picture</string>
    <string name="email_empty">Email kamu masih kosong. Yuk, isi dulu.</string>
    <string name="password_empty">Password kamu masih kosong. Isi dulu, ya.</string>
    <string name="login_failed">Uh-oh, login gagal. Coba cek lagi password dan emailnya</string>
    <string name="photo_submitted_by_dicoding_friends">Photo submitted by Dicoding friends</string>
    <string name="mencoba_kamera_digital_saya_photo_embun_ini_di_dekat_rumah">Mencoba kamera digital. Saya photo embun ini di dekat rumah</string>
    <string name="andi">Andi</string>
    <string name="icon_for_username">Icon for username</string>
    <string name="created_at_template">Diposting pada : %1$s</string>
    <string name="created_at_xml_design">Diposting pada : 17 Juni 2022 20:20</string>
    <string name="email_hint_register">"Masukkan email "</string>
    <string name="password_hint_register">Password ( min. 6 digit , bebas )</string>
    <string name="username_hint">"Masukkan nama pengguna ( min. 5 digit ) "</string>
    <string name="username_invalid">Username minimal 5 digit</string>
    <string name="email_registered_error">Email ini sudah terdaftar. Coba gunakan email lain.</string>
    <string name="register_success">"Akun berhasil dibuat ! Selanjutnya silahkan login. "</string>
    <string name="click_to_flip_camera">Flip camera to use</string>
    <string name="give_image_description">Masukkan deskripsi dari gambar kamu</string>
    <string name="kamera">Kamera</string>
    <string name="galeri">Galeri</string>
    <string name="upload">Upload</string>
    <string name="image_preview_before_upload">Image preview before upload</string>
    <string name="upload_photo_preview_info">Di atas adalah preview dari photo yang akan di upload. Jika masih kosong, pilih photo dengan jepret langsung atau dari galeri</string>
    <string name="story_page_title">Dicoding\'s Friend Story</string>
    <string name="upload_story_page_title">Upload Cerita Baru</string>
    <string name="permission_denied">Izin ditolak</string>
    <string name="image_desc_empty">Deskripsi gambar harus diisi</string>
    <string name="upload_story_fail">Upload gagal :  %1$s</string>
    <string name="selected_picture_empty">Belum ada photo terpilih. Pilih photo dulu</string>
    <string name="choose_image_hint">Pilih salah satu photo</string>
    <string name="open_map">Open Map</string>
    <string name="tampilkan_cerita_dengan_paging">Tampilkan cerita dengan paging</string>
    <string name="daftar_cerita_kawan_dicoding_ditampilkan_dengan_paging3">Daftar cerita kawan Dicoding, ditampilkan dengan Paging3</string>
    <string name="add_story_with_location">Add story with location</string>
    <string name="show_storyspread_on_maps">Show storyspread on maps</string>
    <string name="story_paging_title">Story With Paging3</string>
    <string name="title_activity_story_dicoding_maps">StoryDicodingMapsActivity</string>
    <string name="location_not_found">Lokasi tidak ditemukan</string>
    <string name="my_current_location">Lokasi saya sekarang</string>
    <string name="failed_to_fetch_story_with_location">Gagal mengambil cerita dengan lokasi</string>
    <string name="els_computer_address">Jl. MH Thamrin No.45,Semarang</string>
    <string name="els_computer">\"Marker untuk ELS Computer Semarang \"</string>
    <string name="normal_view">Normal view</string>
    <string name="hybrid_view">Hybrid view</string>
    <string name="satellite_view">Satellite view</string>
    <string name="map_styles">Map styles</string>
    <string name="upload_my_location">Kirim lokasi saya</string>

</resources>