<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailOfStoryActivity">

    <ImageView
        android:id="@+id/photo_detail"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:contentDescription="@string/photo_submitted_by_dicoding_friends"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/backgrounds/scenic" />

    <TextView
        android:id="@+id/username_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:drawablePadding="4dp"
        android:text="@string/andi"
        android:textSize="26sp"
        app:drawableStartCompat="@drawable/ic_baseline_people_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/photo_detail" />

    <TextView
        android:id="@+id/description_detail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:drawablePadding="4dp"
        android:maxLines="3"
        android:text="@string/mencoba_kamera_digital_saya_photo_embun_ini_di_dekat_rumah"
        android:textSize="18sp"
        app:drawableStartCompat="@drawable/ic_baseline_description_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.059"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/posted_at_detail" />

    <TextView
        android:id="@+id/posted_at_detail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="16dp"
        android:drawablePadding="4dp"
        android:text="@string/created_at_xml_design"
        android:textSize="18sp"
        app:drawableStartCompat="@drawable/ic_baseline_access_time_filled_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.01"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username_detail" />

</androidx.constraintlayout.widget.ConstraintLayout>