<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DicodingStoryActivity">

    <ProgressBar
        android:id="@+id/progress_bar_story"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/show_paging_story" />

    <ImageView
        android:id="@+id/image_icon_story"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/image_collection"
        android:elevation="2dp"
        app:layout_constraintBottom_toBottomOf="@+id/story_page_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/story_page_title"
        app:layout_constraintVertical_bias="0.464"
        app:srcCompat="@drawable/ic_baseline_collections_24" />

    <TextView
        android:id="@+id/story_page_title"
        android:layout_width="336dp"
        android:layout_height="65dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:elevation="2dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="fill"
        android:text="@string/cerita_dari_teman_teman_dicoding"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/image_icon_story"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_stories"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progress_bar_story" />

    <Button
        android:id="@+id/show_paging_story"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/tampilkan_cerita_dengan_paging"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="@+id/story_page_title"
        app:layout_constraintStart_toEndOf="@+id/image_icon_story"
        app:layout_constraintTop_toBottomOf="@+id/story_page_title" />
</androidx.constraintlayout.widget.ConstraintLayout>